added country matrix and update all links

--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -74,15 +74,44 @@
             </li>
             <li>Gallery</li>
             <li>Join Club</li>
-            <li>Resources</li>
+            <li>
+              <a href="./resources.html">Resources</a>
+              <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="./resources/country-matrix.html">Country Matrix</a>
+                  </li>
+                  <li>
+                    <a href="./resources/background-guides.html"
+                      >Background Guides</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./resources/awards-criteria.html"
+                      >Awards Criteria</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./resources/conference-schedule.html">
+                      Conference Schedule</a
+                    >
+                  </li>
+
+                  <li>
+                    <a href="#bottom"> Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </div>
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Delegate Application <br /></h2>
+        <h2 class="header theme">Delegate Application<br /></h2>
       </div>
-      <form class="form" action="javascript:void(0);">
+      <form class="form">
         <div class="name">
           <div class="first-name">
             <label for="">First Name</label>
@@ -129,22 +158,15 @@
         >
         <div class="preference-one">
           <label for="">1.</label>
+
           <div class="one-1">
-            <select id="one-1">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-one-1" id="one-1">
+              <option value="">Select Committee</option>
             </select>
           </div>
           <div class="one-2">
-            <select id="one-2">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-one-2" id="one-2">
+              <option value="">Select Country</option>
             </select>
           </div>
         </div>
@@ -152,21 +174,13 @@
         <div class="preference-two">
           <label for="">2.</label>
           <div class="two-1">
-            <select id="two-1">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-two-1" id="two-1">
+              <option value="">Select Committee</option>
             </select>
           </div>
           <div class="two-2">
-            <select id="two-2">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-two-2" id="two-2">
+              <option value="">Select Country</option>
             </select>
           </div>
         </div>
@@ -174,21 +188,13 @@
         <div class="preference-three">
           <label for="">3.</label>
           <div class="three-1">
-            <select id="three-1">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-three-1" id="three-1">
+              <option value="">Select Committee</option>
             </select>
           </div>
           <div class="three-2">
-            <select id="three-2">
-              <option value=""></option>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="opel">Opel</option>
-              <option value="audi">Audi</option>
+            <select class="select-three-2" id="three-2">
+              <option value="">Select Country</option>
             </select>
           </div>
         </div>
@@ -238,7 +244,7 @@
           <h3>Conference Information</h3>
 
           <p>
-            January 20-23, 2022<br />
+            January 22-23, 2022<br />
             Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
@@ -276,7 +282,7 @@
             <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
             <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
             <a href="mailto: chirag02.sharma@gmail.com"
-              >chirag02.sharma@gmail.com</a
+              >infoamimun22@gmail.com</a
             >
           </div>
         </div>
@@ -284,22 +290,31 @@
       <div class="footer-bottom">
         <ul class="socials">
           <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/amitymun/"
+              ><i class="fa fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a
+              href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"
+              ><i class="fa fa-instagram"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/company/amimunconference"
+              ><i class="fa fa-linkedin-square"></i
+            ></a>
           </li>
         </ul>
-        <p>copyright &copy;2020 Amity University.</p>
+        <p>Copyright &copy;2022 Amity University</p>
       </div>
     </footer>
     <script>
@@ -354,5 +369,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="../main.js"></script>
+    <script src="./options.js"></script>
   </body>
 </html>
