--- a/index.html
+++ b/index.html
@@ -77,7 +77,36 @@
             </li>
             <li>Gallery</li>
             <li>AMIMUN Club</li>
-            <li><a href="./resources.html">Resources</a> </li>
+            <li>
+              <a href="./resources.html">Resources</a>
+              <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="./resources/country-matrix.html">Country Matrix</a>
+                  </li>
+                  <li>
+                    <a href="./resources/background-guides.html"
+                      >Background Guides</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./resources/awards-criteria.html"
+                      >Awards Criteria</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./resources/conference-schedule.html">
+                      Conference Schedule</a
+                    >
+                  </li>
+
+                  <li>
+                    <a href="#bottom"> Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </div>
       </nav>
@@ -133,44 +162,49 @@
             AMIMUN 2022
           </p>
         </div>
-        <p id="sec-gen-msg">
-          Dear Delegate, Human history, especially the past two years, has been
-          inundated with times of great sorrow and strife. Yet, we continue to
-          march forward, forever continuing on towards the horizon. It is with
-          this sentiment of determination, that I invite you to Amity
-          International Model United Nations 2022 (AMIMUN’22). The 11th edition
-          of the AMIMUN Conference will be held online from Saturday, January
-          22nd, to Sunday, January 23rd, 2022. <br />
+        <div class="message">
+          <p id="sec-gen-msg">
+            Dear Delegate, Human history, especially the past two years, has
+            been inundated with times of great sorrow and strife. Yet, we
+            continue to march forward, forever continuing on towards the
+            horizon. It is with this sentiment of determination, that I invite
+            you to Amity International Model United Nations 2022 (AMIMUN’22).
+            The 11th edition of the AMIMUN Conference will be held online from
+            <b>Saturday, January 22nd to Sunday, January 23rd, 2022.</b> <br />
 
-          Each iteration of AMIMUN has expanded upon its legacy with great
-          success, from managing greater numbers each year, to ensuring global
-          participation with our international delegates. We, as the secretariat
-          of AMIMUN’22, are confident in our ability to stay true to tradition
-          and bring to you an exceptional debating experience. Despite all that
-          has transpired, we shall not be deterred- “Preserverantia Omnia
-          Vincit”.<br />
-          AMIMUN’22 is the optimal platform for students across the world to
-          display their fervor for debate through constructive discussion, while
-          simultaneously enabling them to delve further into continuous changes
-          occurring across the world. During this edition, we believe the
-          agendas set will push delegates to truly reflect on the issues today,
-          showing them just how vital it is to persevere above all. We look
-          forward to seeing delegates flourish through this experience, and hope
-          to aid in their path towards being diplomatic delegates, and also
-          holistic young leaders. I would like to take this opportunity to thank
-          our Founder President Sir, Chancellor Sir, Vice-Chancellor Ma’am,
-          Faculty Coordinators, Partners, and Sponsors for their unabating
-          support for AMIMUN'22, and for making this conference possible. On
-          behalf of the secretariat, I extend a warm invitation to all delegates
-          and hope this conference will be as productive for you as an
-          individual, and as a delegate. Remember, “Preserverantia Omnia
-          Vincit”- perseverance conquers all. I wish you all the very best.
-          <br />
-          Sincerely,<br />
-          Shubhangi Thakur<br />
-          Secretary-General<br />
-          Amity International Model United Nations 2022<br />
-        </p>
+            Each iteration of AMIMUN has expanded upon its legacy with great
+            success, from managing greater numbers each year, to ensuring global
+            participation with our international delegates. We, as the
+            secretariat of AMIMUN’22, are confident in our ability to stay true
+            to tradition and bring to you an exceptional debating experience.
+            Despite all that has transpired, we shall not be deterred-
+            <b>“Preserverantia Omnia Vincit”.</b><br />
+            AMIMUN’22 is the optimal platform for students across the world to
+            display their fervor for debate through constructive discussion,
+            while simultaneously enabling them to delve further into continuous
+            changes occurring across the world. During this edition, we believe
+            the agendas set will push delegates to truly reflect on the issues
+            today, showing them just how vital it is to persevere above all. We
+            look forward to seeing delegates flourish through this experience,
+            and hope to aid in their path towards being diplomatic delegates,
+            and also holistic young leaders. I would like to take this
+            opportunity to thank our Founder President Sir, Chancellor Sir,
+            Vice-Chancellor Ma’am, Faculty Coordinators, Partners, and Sponsors
+            for their unabating support for AMIMUN'22, and for making this
+            conference possible. On behalf of the secretariat, I extend a warm
+            invitation to all delegates and hope this conference will be as
+            productive for you as an individual, and as a delegate. Remember,
+            <b>“Preserverantia Omnia Vincit”- perseverance conquers all</b>. I
+            wish you all the very best.
+            <br />
+          </p>
+          <p id="sec-gen-regards">
+            Sincerely,<br />
+            Shubhangi Thakur<br />
+            Secretary General<br />
+            Amity International Model United Nations 2022<br />
+          </p>
+        </div>
       </div>
 
       <div class="section-sponsors">
@@ -310,7 +344,7 @@
             ></a>
           </li>
         </ul>
-        <p>copyright &copy;2022 Amity University</p>
+        <p>Copyright &copy;2022 Amity University</p>
       </div>
     </footer>
     <script>
