--- a/resources/background-guides.html
+++ b/resources/background-guides.html
@@ -22,26 +22,22 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="..//about.html">About</a></li>
+            <li><a href="../about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../our-team/guiding-light.html"
-                      >Our Guiding Light</a
-                    >
+                    <a href="./guiding-light.html">Our Guiding Light</a>
                   </li>
                   <li>
-                    <a href="../our-team/advisory-board.html">Advisory Board</a>
+                    <a href="./advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="../our-team/secretariate.html">Secretariat</a>
+                    <a href="./secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="../our-team/org-committee.html"
-                      >Organising Committee</a
-                    >
+                    <a href="./org-committee.html">Organising Committee</a>
                   </li>
                 </ul>
               </div>
@@ -80,20 +76,20 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../resources/country-matrix.html">Country Matrix</a>
+                    <a href="./resources/country-matrix.html">Country Matrix</a>
                   </li>
                   <li>
-                    <a href="../resources/background-guides.html"
+                    <a href="./resources/background-guides.html"
                       >Background Guides</a
                     >
                   </li>
                   <li>
-                    <a href="../resources/awards-criteria.html"
+                    <a href="./resources/awards-criteria.html"
                       >Awards Criteria</a
                     >
                   </li>
                   <li>
-                    <a href="../resources/conference-schedule.html">
+                    <a href="./resources/conference-schedule.html">
                       Conference Schedule</a
                     >
                   </li>
@@ -109,98 +105,109 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">United Nations Commission on the Status of Women (UNCSW)<br /></h2>
+        <h2 class="header theme">Background Guide</h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
-            The Commission on the Status of Women (CSW) is the world's first international body dedicated solely to advancing women's equality, sexual orientation equality, and empowerment. In February 1947, the Commission met for the first time in Lake Success, New York. The Commission's initial focus was on legal measures to preserve women's human rights and raising awareness of women's condition around the world. Deliberations in the Commission introduced new topics into the international political arena. The work of the Commission drew the interest, participation, and support of the burgeoning international women's movement from the start.<br>
-
-In keeping with the Committee's unwavering commitment to securing a stage and strongly advocating for gender equality and women's empowerment around the world, Delegates will be expected to create a unique space for the exchange of national experience and good practical application, as well as for bringing the voice of the women's movement to the United Nations through debate and discourse.
-
-          </h3>
+          <h3 class="comming-soon">Coming Soon</h3>
+          <!-- <h3 class="header-text theme-eng">
+            The second e-edition of Amity International Model United Nations
+            shall be a simulation of the United Nations, spanning two days. At
+            AMIMUN, delegates gain a better understanding of the inner workings
+            of the UN, engage in diplomatic discussion, and enhance their
+            knowledge of global relations. The past ten editions of AMIUMUN have
+            each continued to set the bar higher in terms of innovative themes
+            and constructive debate; with this conference continuing the
+            tradition. The second e-edition of AMIMUN shall endeavour to
+            construct a space within which delegates will develop a more
+            holistic consciousness of the world around them, and enhance
+            critical thinking, public speaking, and leadership skills. Thus,
+            AMIMUN abides by the Preamble to the Charter of the United Nations:
+            “To practice tolerance and live together in peace with one another
+            as good neighbours”.
+          </h3> -->
         </div>
       </div>
+    </div>
 
-     
     <hr />
     <footer>
-      <div class="footer-content">
-        <div class="content-one">
-          <h3>Conference Information</h3>
-
-          <p>
-            January 22-23, 2022<br />
-            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
-          </p>
-
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
-            width="600"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-          ></iframe>
+        <div class="footer-content">
+          <div class="content-one">
+            <h3>Conference Information</h3>
+  
+            <p>
+              January 22-23, 2022<br />
+              Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+            </p>
+  
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
+              width="600"
+              height="200"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+          <div class="content-two">
+            <h3>Contact Us</h3>
+  
+            <div class="contact">
+              <p><b>Shubhangi Thakur</b>, Secretary General</p>
+              <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
+              <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
+            </div>
+  
+            <div class="contact">
+              <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
+              <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
+              <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
+            </div>
+  
+            <div class="contact">
+              <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
+              <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+              <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
+            </div>
+  
+            <div class="contact">
+              <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
+              <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
+              <a href="mailto: chirag02.sharma@gmail.com"
+                >infoamimun22@gmail.com</a
+              >
+            </div>
+          </div>
         </div>
-        <div class="content-two">
-          <h3>Contact Us</h3>
-
-          <div class="contact">
-            <p><b>Shubhangi Thakur</b>, Secretary General</p>
-            <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
-            <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
-          </div>
-
-          <div class="contact">
-            <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
-            <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
-            <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
-          </div>
-
-          <div class="contact">
-            <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
-            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
-            <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
-          </div>
-
-          <div class="contact">
-            <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
-            <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
-            <a href="mailto: chirag02.sharma@gmail.com"
-              >infoamimun22@gmail.com</a
-            >
-          </div>
+        <div class="footer-bottom">
+          <ul class="socials">
+            <li>
+              <a href="https://www.facebook.com/amitymun/"
+                ><i class="fa fa-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
+                ><i class="fa fa-youtube"></i
+              ></a>
+            </li>
+            <li>
+              <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
+            </li>
+            <li>
+              <a href="https://instagram.com/amimun22?utm_medium=copy_link"
+                ><i class="fa fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/company/amimunconference"
+                ><i class="fa fa-linkedin-square"></i
+              ></a>
+            </li>
+          </ul>
+          <p>Copyright &copy;2022 Amity University</p>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <ul class="socials">
-          <li>
-            <a href="https://www.facebook.com/amitymun/"
-              ><i class="fa fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
-              ><i class="fa fa-youtube"></i
-            ></a>
-          </li>
-          <li>
-            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
-          </li>
-          <li>
-            <a href="https://instagram.com/amimun22?utm_medium=copy_link"
-              ><i class="fa fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/company/amimunconference"
-              ><i class="fa fa-linkedin-square"></i
-            ></a>
-          </li>
-        </ul>
-        <p>Copyright &copy;2022 Amity University</p>
-      </div>
-    </footer>
+      </footer>
     <script>
       var $cursor = $(".cursor"),
         $overlay = $(".project-overlay");
