--- a/committees/ip.html
+++ b/committees/ip.html
@@ -74,7 +74,38 @@
             </li>
             <li>Gallery</li>
             <li>Join Club</li>
-            <li>Resources</li>
+            <li>
+              <a href="./resources.html">Resources</a>
+              <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="../resources/country-matrix.html"
+                      >Country Matrix</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../resources/background-guides.html"
+                      >Background Guides</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../resources/awards-criteria.html"
+                      >Awards Criteria</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../resources/conference-schedule.html">
+                      Conference Schedule</a
+                    >
+                  </li>
+
+                  <li>
+                    <a href="#bottom"> Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </div>
       </nav>
@@ -112,7 +143,7 @@
           <h3>Conference Information</h3>
 
           <p>
-            January 20-23, 2022<br />
+            January 22-23, 2022<br />
             Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
@@ -150,7 +181,7 @@
             <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
             <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
             <a href="mailto: chirag02.sharma@gmail.com"
-              >chirag02.sharma@gmail.com</a
+              >infoamimun22@gmail.com</a
             >
           </div>
         </div>
@@ -158,22 +189,31 @@
       <div class="footer-bottom">
         <ul class="socials">
           <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/amitymun/"
+              ><i class="fa fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a
+              href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"
+              ><i class="fa fa-instagram"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/company/amimunconference"
+              ><i class="fa fa-linkedin-square"></i
+            ></a>
           </li>
         </ul>
-        <p>copyright &copy;2020 Amity University.</p>
+        <p>Copyright &copy;2022 Amity University</p>
       </div>
     </footer>
     <script>
