--- a/resources/awards-criteria.html
+++ b/resources/awards-criteria.html
@@ -14,34 +14,30 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="./delegate.css" />
-    <title>AMIMUN'22 | Register</title>
+    <link rel="stylesheet" href="../about.css" />
+    <title>AMIMUN'22 | Home</title>
   </head>
   <body>
     <div id="back">
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="..//about.html">About</a></li>
+            <li><a href="../about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../our-team/guiding-light.html"
-                      >Our Guiding Light</a
-                    >
+                    <a href="./guiding-light.html">Our Guiding Light</a>
                   </li>
                   <li>
-                    <a href="../our-team/advisory-board.html">Advisory Board</a>
+                    <a href="./advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="../our-team/secretariate.html">Secretariat</a>
+                    <a href="./secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="../our-team/org-committee.html"
-                      >Organising Committee</a
-                    >
+                    <a href="./org-committee.html">Organising Committee</a>
                   </li>
                 </ul>
               </div>
@@ -73,7 +69,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -109,86 +105,29 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">International Press Application <br /></h2>
+        <h2 class="header theme">Awards Criteria</h2>
+        <div class="content">
+          <h3 class="comming-soon">Coming Soon</h3>
+          <!-- <h3 class="header-text theme-eng">
+            The second e-edition of Amity International Model United Nations
+            shall be a simulation of the United Nations, spanning two days. At
+            AMIMUN, delegates gain a better understanding of the inner workings
+            of the UN, engage in diplomatic discussion, and enhance their
+            knowledge of global relations. The past ten editions of AMIUMUN have
+            each continued to set the bar higher in terms of innovative themes
+            and constructive debate; with this conference continuing the
+            tradition. The second e-edition of AMIMUN shall endeavour to
+            construct a space within which delegates will develop a more
+            holistic consciousness of the world around them, and enhance
+            critical thinking, public speaking, and leadership skills. Thus,
+            AMIMUN abides by the Preamble to the Charter of the United Nations:
+            “To practice tolerance and live together in peace with one another
+            as good neighbours”.
+          </h3> -->
+        </div>
       </div>
-      <form class="form" action="javascript:void(0);">
-        <div class="name">
-          <div class="first-name">
-            <label for="">First Name</label>
-            <input name="first-name" type="text" />
-          </div>
-
-          <div class="last-name">
-            <label for="">Last Name</label>
-            <input name="last-name" type="text" />
-          </div>
-        </div>
-
-        <label for="">Phone</label>
-        <input name="phone" type="number" />
-
-        <label for="">Email</label>
-        <input name="email" type="email" />
-
-        <label for="">College/Institute Name</label>
-        <input name="college" type="text" />
-
-        <label for="">University Name</label>
-        <input name="university" type="text" />
-
-        <label for="">Academic Year</label>
-        <input name="year" type="number" />
-
-        <label for="">Country</label>
-        <input name="university" type="text" />
-
-        <label for="">State</label>
-        <input name="university" type="text" />
-
-        <label for="">City</label>
-        <input name="university" type="text" />
-
-        <label for="">ZIP</label>
-        <input name="university" type="text" />
-
-        <hr />
-
-        <div class="ques">
-          <label for="">Have you attended MUN before</label><br />
-          <input type="radio" id="html" name="fav_language" value="HTML" />
-          <label for="html">Yes</label><br />
-          <input type="radio" id="css" name="fav_language" value="CSS" />
-          <label for="css">No</label><br />
-
-          <label for="">How many MUNs have you attended before?</label>
-          <input name="mun-exp" type="number" />
-
-          <label for="answer"
-            >If Yes. How was your previous MUN experience?</label
-          >
-
-          <textarea
-            id="answer"
-            name="answer"
-            rows="4"
-            cols="50"
-            placeholder="Maximum 500 words"
-          ></textarea>
-        </div>
-
-        <hr />
-        <label for="confirm"
-          >I hereby declare, that all of the information I have provided is
-          complete and correct. I am aware that missing or incomplete
-          information, whether deliberate or the result of negligence, may
-          exclude me from the event or – if it is not noticed until after I am
-          accepted for the event – may lead to revocation of my
-          participation.</label
-        >
-        <label for="confirm">I Agree </label>
-        <input type="checkbox" name="confirm" id="" />
-      </form>
     </div>
+
     <hr />
     <footer>
       <div class="footer-content">
@@ -307,6 +246,44 @@
         flag = false;
         TweenLite.to($cursor, 0.3, { scale: 0.1, autoAlpha: 0 });
       });
+
+      const body = document.body,
+        scrollWrap = document.getElementsByClassName(
+          "smooth-scroll-wrapper"
+        )[0],
+        height = scrollWrap.getBoundingClientRect().height - 1,
+        speed = 0.04;
+
+      var offset = 0;
+
+      body.style.height = Math.floor(height) + "px";
+
+      function smoothScroll() {
+        offset += (window.pageYOffset - offset) * speed;
+
+        var scroll = "translateY(-" + offset + "px) translateZ(0)";
+        scrollWrap.style.transform = scroll;
+
+        callScroll = requestAnimationFrame(smoothScroll);
+      }
+
+      // smoothScroll();
+
+      $(function () {
+        var elements = $(".text, .img").toArray();
+        $(window).scroll(function () {
+          elements.forEach(function (item) {
+            if ($(this).scrollTop() >= $(item).offset().top - 600) {
+              $(item).addClass("reveal");
+            }
+          });
+        });
+        elements.forEach(function (item) {
+          if ($(this).scrollTop() >= $(item).offset().top - 600) {
+            $(item).addClass("reveal");
+          }
+        });
+      });
     </script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
@@ -320,6 +297,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="../main.js"></script>
   </body>
 </html>
